feat: implement individual onboardinf endpoint
